# lsysmonitor

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  LSysMonitor.pro  aboutpage.cpp  aboutpage.h  memoryinfopage.cpp  memoryinfopage.h  moduleinfopage.cpp  moduleinfopage.h  processinfopage.cpp  processinfopage.h  systeminfopage.cpp  systeminfopage.h  widget.cpp  widget.h
